@@ -1,3 +1,5 @@
+	- Changed license from GPL to LGPL, to allow commercial programs to include GeoIP API
+
 1.2.1  June 19th 2007
 	- Made GeoIP ASNum database work with Java API
 	- Added timeZone and regionName classes to lookup timezone and region name
